// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`map new speech prop to older aural prop 1`] = `
<MediaQuery
  aural={true}
>
  <div>
    Hello World
  </div>
</MediaQuery>
`;

exports[`renders correctly 1`] = `
<MediaQuery
  component="div"
  maxWidth={320}
  minWidth={640}
  screen={true}
>
  <div>
    Hello World
  </div>
</MediaQuery>
`;

exports[`renders less than and great than correctly 1`] = `
<MediaQuery
  maxWidth={319}
  minWidth={641}
>
  <div>
    Hello World
  </div>
</MediaQuery>
`;
